--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -2,6 +2,6 @@
 
 en:
   site_settings:
-    vk_login_enabled: "Enable Login via Vkontakte"
-    vk_client_id: "Client id for VK authentication, registered at http://vk.com/"
-    vk_client_secret: "Client secret for VK authentication, registered at http://vk.com/"
+    vk_auth_enabled: "Enable Login via VK"
+    vk_app_id: "App ID for VK authentication, registered at https://vk.com"
+    vk_secure_key: "Secure key for VK authentication, registered at https://vk.com"
