Abbreviations of name
<img src="https://toxu.ru/uploads/default/original/2X/c/ce21623ee3de472324a26d2159504c416c4732bb.jpeg" alt="vk" class="d-lazyload" width="220" height="312">

--- a/config/locales/client.ru.yml
+++ b/config/locales/client.ru.yml
@@ -4,5 +4,5 @@ ru:
   js:
     login:
       vkontakte:
-        title: "с помощью VK"
+        title: "VK"
         message: "Аутентификация с помощью VK (убедитесь, что всплывающие окна разрешены)"
