--- a/config/locales/client.ru.yml
+++ b/config/locales/client.ru.yml
@@ -4,5 +4,5 @@ ru:
   js:
     login:
       vkontakte:
-        title: "VK"
+        title: "Войти через VK"
         message: "Аутентификация с помощью VK (убедитесь, что всплывающие окна разрешены)"
